[project]
name = "monta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nick Nissen", email = "nickknissen@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "async-timeout>=5.0.1",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
